[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/test.gd" type="Script" id=1]
[ext_resource path="res://sprites/space3.png" type="Texture" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://sprites/player.png" type="Texture" id=4]
[ext_resource path="res://fonts/vibes.fnt" type="BitmapFont" id=5]
[ext_resource path="res://scripts/score.gd" type="Script" id=6]
[ext_resource path="res://audio/bodenstaendig.ogg" type="AudioStream" id=7]
[ext_resource path="res://sprites/onscreen_controls/flatDark/flatDark23.png" type="Texture" id=8]
[ext_resource path="res://sprites/onscreen_controls/flatDark/flatDark24.png" type="Texture" id=9]
[ext_resource path="res://sprites/onscreen_controls/flatDark/flatDark47.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CanvasItemMaterial" id=2]

shader/shading_mode = 0

[sub_resource type="Theme" id=3]

default_font = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=4]

shader/shading_mode = 0

[node name="Root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="space3" type="Sprite" parent="."]

transform/pos = Vector2( 511.559, 356.311 )
transform/scale = Vector2( 1.5, 1.18699 )
texture = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 509.474, 499.456 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.15858, 0, 0, 1.70583, 0.0447888, -0.188461 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 3 )

[node name="player" type="Sprite" parent="Player"]

material/material = SubResource( 2 )
transform/pos = Vector2( 0.571045, 0.620728 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0.0447888, -0.188461 )
transform/scale = Vector2( 2.15858, 1.70583 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Score Label" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 3 )
margin/left = 743.0
margin/top = 14.0
margin/right = 883.0
margin/bottom = 59.0
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="Score Label"]

material/material = SubResource( 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 3 )
margin/left = 148.0
margin/top = 1.0
margin/right = 288.0
margin/bottom = 46.0
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = true
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Node" type="Node" parent="."]

[node name="Button_Left" type="TouchScreenButton" parent="Node"]

transform/pos = Vector2( 35.7052, 586.674 )
transform/rot = 180.0
transform/scale = Vector2( -0.990425, 0.997373 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Button_Right" type="TouchScreenButton" parent="Node"]

transform/pos = Vector2( 139.711, 506.142 )
transform/rot = 180.0
transform/scale = Vector2( -0.984015, -0.992769 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Button_Shoot" type="TouchScreenButton" parent="Node"]

transform/pos = Vector2( 967.638, 582.709 )
transform/rot = -180.0
transform/scale = Vector2( 2.31572, 1.51525 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0


